<resources>
    <string name="app_name">SampleApplication</string>
    <string name="action_settings">Settings</string>
    <string name="display_text">Display Text</string>
    <string name="change_text_color">Change Text Color</string>
    <string name="text_size">Text Size</string>

    <!-- Key name for color preference in SharedPreferences -->
    <string name="pref_color_key" translatable="false">color</string>

    <!-- Label for red color preference -->
    <string name="pref_color_label_red">Red</string>
    <!-- Label for blue color preference -->
    <string name="pref_color_label_blue">Blue</string>
    <!-- Label for green color preference -->
    <string name="pref_color_label_green">Green</string>

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>
    <!-- Value in SharedPreferences for blue color option -->
    <string name="pref_color_blue_value" translatable="false">blue</string>
    <!-- Value in SharedPreferences for green color option -->
    <string name="pref_color_green_value" translatable="false">green</string>


    <!-- Key name for storing size in SharedPreferences -->
    <string name="pref_size_key" translatable="false">size</string>

    <!-- Default for size preference -->
    <string name="pref_size_default" translatable="false">15</string>

</resources>
